--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "build:watch": "webpack --watch"
+    "build:watch": "webpack --watch",
+    "serve": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,8 @@
     "less-loader": "^5.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5"
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
